--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,7 +6,7 @@
 /*
    Variables
    ========================================================================== */
-$base-font-family:      "Merriweather", serif;
+$base-font-family:      "Lato", sans-serif;
 $base-font-family-sans: "Lato", sans-serif;
 $base-font-family-mono: "Source Code Pro", monospace;
 $base-font-size:        16px;
@@ -18,9 +18,9 @@ $light-color:      #eee;
 
 $text-color:       $dark-color;
 $text-color-light: $light-color;
-$background-color: #fdfdfd;
-$brand-color:      #e74c3c;
-$brand-color-2:    #7D8866;
+$background-color: #555555;
+$brand-color:      #38343A;
+$brand-color-2:    #503A4E;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 35%);
