--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,12 +13,12 @@ $base-font-size:        16px;
 $small-font-size:       $base-font-size * 0.875;
 $base-line-height:      1;
 
-$dark-color:       #111;
-$light-color:      #eee;
+$dark-color:       #eee;
+$light-color:      #111;
 
 $text-color:       $light-color;
 $text-color-light: $dark-color;
-$background-color: #333333;
+$background-color: #555555;
 $brand-color:      #6d5654;
 $brand-color-2:    #3d3634;
 
