--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,6 +9,8 @@
 
 .container {
     background: $background-color;
+    border: 1px solid $text-color-light;
+    box-shadow: 0px 0px 2px 2px $dark-color;
     padding: 0;
     position: relative;
     margin: 0 auto;
@@ -91,7 +93,7 @@
     @include flex-wrap(wrap);
 
     > li {
-        border: 10px solid transparent;
+        border: 3px solid transparent;
         color: $text-color-light;
         flex-grow: 1;
         height: 200px;
@@ -122,7 +124,7 @@
             top: 0;
 
             &:hover {
-                background: rgba($dark-color, .25);
+                background: rgba($dark-color, .0);
             }
 
             .post-list-info {
@@ -133,10 +135,10 @@
                 text-transform: uppercase;
 
                 .post-list-title {
-                    color: $light-color;
+                    color: $text-color-light;
                     font-size: 22px;
-                    font-style: italic;
-                    letter-spacing: 4px;
+                    font-style: thin;
+                    letter-spacing: 3px;
                     line-height: 135%;
                     margin: 0;
                 }
@@ -210,18 +212,21 @@
     object-fit: cover;
     position: relative;
     width: 200px;
+    border: 2px solid $text-color-light;
+    box-shadow: 0px 0px 2px 2px $dark-color;
 
-    @include border-radius(50%);
+/*    @include border-radius(100%); */
 }
 
 .post-title {
     font-size: 42px;
-    font-style: italic;
+    font-style: bold;
     letter-spacing: 8px;
     line-height: 135%;
     margin: 0;
     text-transform: uppercase;
     text-align: center;
+    color: $accent-color;
 
     @include media-query($on-laptop) {
         font-size: 36px;
@@ -232,6 +237,7 @@
 .post-content {
     margin-bottom: $spacing-unit;
     line-height: 2;
+    color: $text-color-light;
 
     h2 {
         font-size: 32px;
@@ -290,7 +296,7 @@
         }
 
         .meta-title {
-            color: $text-color;
+            color: $accent-color;
             font-family: $base-font-family-sans;
             font-size: 13px;
             font-weight: 700;
@@ -301,7 +307,7 @@
         }
 
         .meta-content {
-            color: $text-color;
+            color: $text-color-light;
             font-size: 16px;
         }
     }
