--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -94,6 +94,7 @@
 
     > li {
         border: 3px solid transparent;
+        //outline: 2px solid #f00;
         color: $text-color-light;
         flex-grow: 1;
         height: 200px;
